--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.1
 PyYAML==6.0.2
+recaptcha==1.0rc1
 regex==2024.11.6
 requests==2.32.3
 richenum==2.0.2
